--- a/Jour2/ex-freshly restaurant/index.html
+++ b/Jour2/ex-freshly restaurant/index.html
@@ -8,7 +8,11 @@
 	<link rel="stylesheet" href="css/common-v3.css">
 	<link rel="stylesheet" href="css/theme.css">
 	<link rel="stylesheet" type="text/css" href="./slick-1.8.1/slick/slick-theme.css"/></head>
-
+	<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+	<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
+	<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous" defer></script>
+	<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js" defer></script>
+	<script type="text/javascript" src="./js/init-slick.js" defer></script>
 <body>
 	<header class="header container">
 		<div class="logo">
@@ -86,9 +90,7 @@
 		<p><a rel="license" href="https://3wa.fr/propriete-materiel-pedagogique/"><img alt="Propriété de la 3W Academy" src="./logo-3wa.png"></a></p>
 		<p>Ce matériel pédagogique est la propriété de la <a rel="license" href="https://3wa.fr/propriete-materiel-pedagogique/">3W Academy</a>. Cet exercice a été réalisé par Stephane Pereck.</p>
 	</footer>
-	<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-	<script type="text/javascript" src="./slick-1.8.1/slick/slick.min.js"></script>
-	<script type="text/javascript" src="./js/init-slick.js"></script>
+
 </body>
 
 </html>
