--- a/Jour2/ex-freshly restaurant/index.html
+++ b/Jour2/ex-freshly restaurant/index.html
@@ -5,26 +5,35 @@
 	<meta charset="UTF-8">
 	<meta name="description" content="Le template des démos du module 3 (feuille de style commune en version 3)">
 	<title>Template module 3</title>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/common-v3.css">
 	<link rel="stylesheet" href="css/theme.css">
-	<link rel="stylesheet" type="text/css" href="./slick-1.8.1/slick/slick-theme.css"/></head>
+	<link rel="stylesheet" type="text/css" href="./slick-1.8.1/slick/slick-theme.css"/>
 	<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
 	<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Athiti:wght@500&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Merienda&display=swap" rel="stylesheet">
 	<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous" defer></script>
 	<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js" defer></script>
 	<script type="text/javascript" src="./js/init-slick.js" defer></script>
+</head>
 <body>
-	<header class="header container">
+	<header class="header">
 		<div class="logo">
 			<img src="./ressources/images/logo.png" alt="logo">
-			<h1>Template module 3</h1>
+			<h1>Freshly Restaurant</h1>
 		</div>
 		<nav>
 			<menu>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
+				<li>Home</li>
+				<li>About</li>
+				<li>Menus</li>
+				<li>Contact</li>
 			</menu>
 		</nav>
 	</header>
@@ -38,58 +47,81 @@
 			</div>
 
 			<article>
-				<h2></h2>
+				<h2>Welcome to Freshly Restaurant</h2>
 				<div>
-					<p></p>
-					<p></p>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio facere a molestiae consectetur hic. Dolore error dicta id excepturi, eveniet delectus ex? Dolorem, optio similique accusantium totam facere tempore magni.</p>
+					<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi, aut similique! Quis unde ut dolorem hic delectus labore tenetur. Animi suscipit totam optio amet enim. Magnam eligendi totam exercitationem assumenda.</p>
 				</div>
 				<div><img src="" alt=""></div>
 			</article>
 		<article>
-			<h2></h2>
+			<h3></h3>
 			<section>
-				<h3></h3>
-				<div><img src="" alt=""></div>
-				<ul>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
+				<h4>Meat menu</h4>
+				<div><img src="./ressources/images/meat-menu.jpg" alt=""></div>
+				<ul class="texte-menu">
+					<li>Lorem ipsum dolor sit.</li>
+					<li>Lorem ipsum dolor sit.</li>
+					<li>Lorem ipsum dolor sit.</li>
+					<li>Lorem ipsum dolor sit.</li>
+					<li>Lorem, ipsum dolor.</li>
 				</ul>
-				<button></button>
+				<button>See more</button>
 			</section>
 			<section>
-				<h3></h3>
-				<div><img src="" alt=""></div>
-				<ul>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
+				<h4>Fish menu</h4>
+				<div><img src="./ressources/images/fish-menu.jpg" alt="fish-menu"></div>
+				<ul class="texte-menu">
+					<li>Lorem ipsum dolor sit.</li>
+					<li>Lorem, ipsum dolor.</li>
+					<li>Lorem ipsum dolor sit.</li>
+					<li>Lorem ipsum dolor sit.</li>
+					<li>Lorem ipsum dolor sit.</li>
 				</ul>
-				<button></button>
+				<button>See more</button>
 			</section>
 			<section>
-				<h3></h3>
-				<div><img src="" alt=""></div>
-				<ul>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
+				<h4>Vegetarian menu</h4>
+				<div><img src="./ressources/images/vegetarian-menu.jpg" alt="veg"></div>
+				<ul class="texte-menu">
+					<li>Lorem, ipsum dolor.</li>
+					<li>Lorem, ipsum dolor.</li>
+					<li>Lorem, ipsum dolor.</li>
+					<li>Lorem, ipsum dolor.</li>
+					<li>Lorem, ipsum dolor.</li>
 				</ul>
-				<button></button>
+				<button>See more</button>
 			</section>
 		</article>
 	</main>
 	
-	<footer class="footer">
-		<p><a rel="license" href="https://3wa.fr/propriete-materiel-pedagogique/"><img alt="Propriété de la 3W Academy" src="./logo-3wa.png"></a></p>
-		<p>Ce matériel pédagogique est la propriété de la <a rel="license" href="https://3wa.fr/propriete-materiel-pedagogique/">3W Academy</a>. Cet exercice a été réalisé par Stephane Pereck.</p>
-	</footer>
+	<footer >
+		<div class="footer-2">
+			<div>
+				<h5>Opening hours</h5>
+				<p>Monday: Closed</p>
+				<p>Tue-Wed : 9am - 10pm</p>
+				<p>Thu-Fri : 9am - 10pm</p>
+				<p>Sat-Sun : 5pm - 10pm</p>
+			</div>
+			<div>
+				<h5>Contact</h5>
+				<p>13 Christopher Street</p>
+				<p>New York,</p>
+				<p>NY 10014-3543</p>
+				<p>+01 2000 800 9999</p>
+			</div>
+			<div>
+				<h5>Social networks</h5>
+				<p></p>
+			</div>
+		</div>
+		<div class="footer">
+			<p><a rel="license" href="https://3wa.fr/propriete-materiel-pedagogique/"><img alt="Propriété de la 3W Academy" src="./logo-3wa.png"></a></p>
+			<p>Cet exercice de 3W Academy est mis à disposition pour l'usage personnel des étudiants. Pas de Rediffusion - Attribution - Pas d'Utilisation Commerciale - Pas de Modification - International.</p>
+			<p>Les autorisations au-delà du champ de cette licence peuvent être obtenues auprès de contact@3wa.fr. Les maquettes ont été réalisées par Catherine Denos. </p>
+		</div>
+		</footer>
 
 </body>
 
