--- a/template module 3/index.html
+++ b/template module 3/index.html
@@ -7,6 +7,8 @@
 	<title>Template module 3</title>
 	<link rel="stylesheet" href="css/common-v3.css">
 	<link rel="stylesheet" href="css/theme.css">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
