--- a/Jour2/ex-freshly restaurant/index.html
+++ b/Jour2/ex-freshly restaurant/index.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="description" content="Le template des démos du module 3 (feuille de style commune en version 3)">
 	<title>Template module 3</title>
+	<script src="https://kit.fontawesome.com/f1cf090775.js" crossorigin="anonymous"></script>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/common-v3.css">
@@ -26,7 +27,7 @@
 	<header class="header">
 		<div class="logo">
 			<img src="./ressources/images/logo.png" alt="logo">
-			<h1>Freshly Restaurant</h1>
+			<h1><i class="fa-solid fa-star fa-2xs" style="color: #950000;"></i>Freshly Restaurant<i class="fa-solid fa-star fa-2xs" style="color: #950000;"></i></h1>
 		</div>
 		<nav>
 			<menu>
@@ -47,48 +48,51 @@
 			</div>
 
 			<article>
-				<h2>Welcome to Freshly Restaurant</h2>
-				<div>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio facere a molestiae consectetur hic. Dolore error dicta id excepturi, eveniet delectus ex? Dolorem, optio similique accusantium totam facere tempore magni.</p>
-					<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi, aut similique! Quis unde ut dolorem hic delectus labore tenetur. Animi suscipit totam optio amet enim. Magnam eligendi totam exercitationem assumenda.</p>
+				<h2><i class="fa-solid fa-star fa-2xs" style="color: #950000;"></i>Welcome to Freshly Restaurant<i class="fa-solid fa-star fa-2xs" style="color: #950000;"></i></h2>
+				<div class="flex-article1">
+					<div><img src="./ressources/images/location.jpg" alt="location"></div>
+					<div>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio facere a molestiae consectetur hic. Dolore error dicta id excepturi, eveniet delectus ex? Dolorem, optio similique accusantium totam facere tempore magni.</p>
+						<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi, aut similique! Quis unde ut dolorem hic delectus labore tenetur. Animi suscipit totam optio amet enim. Magnam eligendi totam exercitationem assumenda.</p>
+					</div>
 				</div>
-				<div><img src="" alt=""></div>
 			</article>
-		<article>
-			<h3></h3>
+
+		<article class="menu">
+			<h3><i class="fa-solid fa-star fa-2xs" style="color: #950000;"></i>Special menu<i class="fa-solid fa-star fa-2xs" style="color: #950000;"></i></h3>
 			<section>
-				<h4>Meat menu</h4>
-				<div><img src="./ressources/images/meat-menu.jpg" alt=""></div>
+				<h4><i class="fa-solid fa-star fa-2xs" style="color: #950000;"></i>Meat menu<i class="fa-solid fa-star fa-2xs" style="color: #950000;"></i></h4>
+				<div><img src="./ressources/images/meat-menu.jpg" alt="meat-menu"></div>
 				<ul class="texte-menu">
-					<li>Lorem ipsum dolor sit.</li>
-					<li>Lorem ipsum dolor sit.</li>
-					<li>Lorem ipsum dolor sit.</li>
-					<li>Lorem ipsum dolor sit.</li>
-					<li>Lorem, ipsum dolor.</li>
+					<li><i class="fa-solid fa-star fa-2xs" style="color: #950000;"></i>Lorem ipsum dolor sit.</li>
+					<li><i class="fa-solid fa-star fa-2xs" style="color: #950000;"></i>Lorem ipsum dolor sit.</li>
+					<li><i class="fa-solid fa-star fa-2xs" style="color: #950000;"></i>Lorem ipsum dolor sit.</li>
+					<li><i class="fa-solid fa-star fa-2xs" style="color: #950000;"></i>Lorem ipsum dolor sit.</li>
+					<li><i class="fa-solid fa-star fa-2xs" style="color: #950000;"></i>Lorem, ipsum dolor.</li>
 				</ul>
 				<button>See more</button>
 			</section>
 			<section>
-				<h4>Fish menu</h4>
+				<h4><i class="fa-solid fa-star fa-2xs" style="color: #950000;"></i>Fish menu<i class="fa-solid fa-star fa-2xs" style="color: #950000;"></i></h4>
 				<div><img src="./ressources/images/fish-menu.jpg" alt="fish-menu"></div>
 				<ul class="texte-menu">
-					<li>Lorem ipsum dolor sit.</li>
-					<li>Lorem, ipsum dolor.</li>
-					<li>Lorem ipsum dolor sit.</li>
-					<li>Lorem ipsum dolor sit.</li>
-					<li>Lorem ipsum dolor sit.</li>
+					<li><i class="fa-solid fa-star fa-2xs" style="color: #950000;"></i>Lorem ipsum dolor sit.</li>
+					<li><i class="fa-solid fa-star fa-2xs" style="color: #950000;"></i>Lorem, ipsum dolor.</li>
+					<li><i class="fa-solid fa-star fa-2xs" style="color: #950000;"></i>Lorem ipsum dolor sit.</li>
+					<li><i class="fa-solid fa-star fa-2xs" style="color: #950000;"></i>Lorem ipsum dolor sit.</li>
+					<li><i class="fa-solid fa-star fa-2xs" style="color: #950000;"></i>Lorem ipsum dolor sit.</li>
 				</ul>
 				<button>See more</button>
 			</section>
 			<section>
-				<h4>Vegetarian menu</h4>
+				<h4><i class="fa-solid fa-star fa-2xs" style="color: #950000;"></i>Vegetarian menu<i class="fa-solid fa-star fa-2xs" style="color: #950000;"></i></h4>
 				<div><img src="./ressources/images/vegetarian-menu.jpg" alt="veg"></div>
 				<ul class="texte-menu">
-					<li>Lorem, ipsum dolor.</li>
-					<li>Lorem, ipsum dolor.</li>
-					<li>Lorem, ipsum dolor.</li>
-					<li>Lorem, ipsum dolor.</li>
-					<li>Lorem, ipsum dolor.</li>
+					<li><i class="fa-solid fa-star fa-2xs" style="color: #950000;"></i>Lorem, ipsum dolor.</li>
+					<li><i class="fa-solid fa-star fa-2xs" style="color: #950000;"></i>Lorem, ipsum dolor.</li>
+					<li><i class="fa-solid fa-star fa-2xs" style="color: #950000;"></i>Lorem, ipsum dolor.</li>
+					<li><i class="fa-solid fa-star fa-2xs" style="color: #950000;"></i>Lorem, ipsum dolor.</li>
+					<li><i class="fa-solid fa-star fa-2xs" style="color: #950000;"></i>Lorem, ipsum dolor.</li>
 				</ul>
 				<button>See more</button>
 			</section>
