--- a/Jour2/ex-freshly restaurant/index.html
+++ b/Jour2/ex-freshly restaurant/index.html
@@ -115,9 +115,9 @@
 				<p>NY 10014-3543</p>
 				<p>+01 2000 800 9999</p>
 			</div>
-			<div>
+			<div class="reseau">
 				<h5>Social networks</h5>
-				<p></p>
+				<p><i class="fa-brands fa-facebook-f" style="color: #fff;"></i><i class="fa-brands fa-instagram" style="color: #fff;"></i><i class="fa-brands fa-pinterest-p" style="color: #fff;"></i></p>
 			</div>
 		</div>
 		<div class="footer">
