--- a/Jour2/ex-freshly restaurant/index.html
+++ b/Jour2/ex-freshly restaurant/index.html
@@ -31,10 +31,10 @@
 		</div>
 		<nav>
 			<menu>
-				<li>Home</li>
-				<li>About</li>
-				<li>Menus</li>
-				<li>Contact</li>
+				<li><a href="#">Home</a></li>
+				<li><a href="#">About</a></li>
+				<li><a href="#">Menus</a></li>
+				<li><a href="#">Contact</a></li>
 			</menu>
 		</nav>
 	</header>
