--- a/Jour2/ex-freshly restaurant/index.html
+++ b/Jour2/ex-freshly restaurant/index.html
@@ -70,7 +70,7 @@
 					<li><i class="fa-solid fa-star fa-2xs" style="color: #950000;"></i>Lorem ipsum dolor sit.</li>
 					<li><i class="fa-solid fa-star fa-2xs" style="color: #950000;"></i>Lorem, ipsum dolor.</li>
 				</ul>
-				<button class="button">See more</button>
+				<button class="button"><img src="./ressources/images/fork-knife.svg" alt="">See more</button>
 			</section>
 			<section>
 				<h4><i class="fa-solid fa-star fa-2xs" style="color: #950000;"></i>Fish menu<i class="fa-solid fa-star fa-2xs" style="color: #950000;"></i></h4>
